# vyos-hacker-toolkit

./: README.md  README.rst  pyproject.toml  release  setup-build  setup.cfg  setup.py  tox.ini
.github/workflows/: release-zipapp.yml
data/: source.list  vyos-iso-backdoor
etc/: build_folder  build_repo  email  local_folder  vyos-extra.conf  vyos-extra.conf.sample
lib/vyosextra/: __main__.py  arguments.py  cmd.py  command.py  config.py  control.py  insource.py  log.py  main.py  register.py  repository.py
lib/vyosextra/entry/: __init__.py  branch.py  build.py  docker.py  download.py  dpkg.py  edit.py  make.py  setup.py  ssh.py  test.py  update.py  upgrade.py  version.py  vyos.py
lib/vyostest/: cmd.py  config.py  log.py  repository.py
sbin/: gendata
shell/: bashrc  fishrc
