[metadata]
name = vyos-extra
author = Thomas Mangin
author_email = thomas.mangin@exa-networks.co.uk
url = https://github.com/thomas-mangin/vyos-extra
version = attr: vyosextra.entry.version.VERSION
description = VyOS building tools
long_description = file: README.rst
keywords = VyOS, iso, dpkg
license = BSD 3-Clause License
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: BSD License
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Internet

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =lib
install_requires =
	setuptools

[options.packages.find]
where = lib
exclude =

[options.entry_points]
console_scripts =
    vyos = vyosextra.entry:vyos

[options.package_data]
* = *.txt, *.rst
